unpackaged/main/default/objects/Work_Order_JSA__c/Work_Order_JSA__c.object-meta.xml
<CustomObject>
    <label>Work Order JSA</label>
    <nameField>
        <displayFormat>WOJSA-{0000}</displayFormat>
        <label>Work Order JSA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order JSAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>