unpackaged/main/default/objects/Work_Order_JSA__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Work Order JSAs</relationshipLabel>
    <relationshipName>Work_Order_JSAs1</relationshipName>
    <type>Lookup</type>
</CustomField>