unpackaged/main/default/objects/Work_Order_JSA__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form</label>
    <referenceTo>Form__c</referenceTo>
    <relationshipLabel>Work Order JSAs (Form)</relationshipLabel>
    <relationshipName>Work_Order_JSAs1</relationshipName>
    <type>Lookup</type>
</CustomField>