unpackaged/main/default/objects/Work_Order_JSA__c/fields/JSA_Form__c.field-meta.xml
<CustomField>
    <fullName>JSA_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JSA Form</label>
    <referenceTo>Form__c</referenceTo>
    <relationshipLabel>Work Order JSAs</relationshipLabel>
    <relationshipName>Work_Order_JSAs</relationshipName>
    <type>Lookup</type>
</CustomField>